# speckle

./: .gitignore  Cargo.toml  LICENSE
cargo-speckle/: Cargo.toml
cargo-speckle/src/: cli.rs  file_patcher.rs  git.rs  init_ids.rs  main.rs  sources.rs  sync.rs
cargo-speckle/src/file_patcher/: bare_speckle_visitor.rs  identified_speckle_visitor.rs  mod.rs  patcher.rs  speckle_visitor.rs
cargo-speckle/src/file_patcher/snapshots/: cargo_speckle__file_patcher__tests__patch_bare_attribute_with_other_attributes.snap  cargo_speckle__file_patcher__tests__patch_single_bare_attribute.snap  cargo_speckle__file_patcher__tests__patch_trait_method.snap
cargo-speckle/src/snapshots/: cargo_speckle__file_patcher__tests__patch_impl_method.snap  cargo_speckle__file_patcher__tests__patch_multiple_bare_attributes.snap  cargo_speckle__file_patcher__tests__patch_nested_mod_fn.snap
speckle/: Cargo.toml
speckle-db/: Cargo.toml
speckle-db/src/: db.rs  error.rs  lib.rs  model.rs  schema.sql
speckle-macro/: Cargo.toml  README.md
speckle-macro/src/: lib.rs
speckle-syntax/: Cargo.toml
speckle-syntax/src/: .file_patcher.rs.pending-snap  file_patcher.rs  item_docs_tests.rs  item_span_content_tests.rs  item_speckle_attribute_tests.rs  item_struct_tests.rs  lib.rs  source_range.rs  source_text.rs  speckle_attribute.rs  stored_item.rs
speckle-syntax/src/item/: docs.rs  item.rs  mod.rs  span_content.rs  speckle_attribute.rs
speckle-syntax/src/item/snapshots/: speckle_syntax__item__docs__tests__docs_explicit_doc_attribute.snap  speckle_syntax__item__docs__tests__docs_multi_line.snap  speckle_syntax__item__docs__tests__docs_none.snap  speckle_syntax__item__docs__tests__docs_on_fn.snap  speckle_syntax__item__docs__tests__docs_single_line.snap  speckle_syntax__item__docs__tests__docs_with_other_attributes.snap  speckle_syntax__item__span_content__tests__display_content_fn.snap  speckle_syntax__item__span_content__tests__span_content_const.snap  speckle_syntax__item__span_content__tests__span_content_enum.snap  speckle_syntax__item__span_content__tests__span_content_fn.snap  speckle_syntax__item__span_content__tests__span_content_impl.snap  speckle_syntax__item__span_content__tests__span_content_macro.snap  speckle_syntax__item__span_content__tests__span_content_mod.snap  speckle_syntax__item__span_content__tests__span_content_static.snap  (+6 more)
speckle-syntax/src/snapshots/: speckle_syntax__file_patcher__tests__patch_bare_attribute_with_other_attributes.snap  speckle_syntax__file_patcher__tests__patch_impl_method.snap  speckle_syntax__file_patcher__tests__patch_multiple_bare_attributes.snap  speckle_syntax__file_patcher__tests__patch_nested_mod_fn.snap  speckle_syntax__file_patcher__tests__patch_single_bare_attribute.snap  speckle_syntax__file_patcher__tests__patch_trait_method.snap  speckle_syntax__item_docs_tests__docs_explicit_doc_attribute.snap  speckle_syntax__item_docs_tests__docs_multi_line.snap  speckle_syntax__item_docs_tests__docs_none.snap  speckle_syntax__item_docs_tests__docs_on_fn.snap  speckle_syntax__item_docs_tests__docs_single_line.snap  speckle_syntax__item_docs_tests__docs_with_other_attributes.snap  speckle_syntax__item_span_content_tests__span_content_const.snap  speckle_syntax__item_span_content_tests__span_content_each_variant.snap  speckle_syntax__item_span_content_tests__span_content_enum.snap  speckle_syntax__item_span_content_tests__span_content_fn.snap  speckle_syntax__item_span_content_tests__span_content_impl.snap  speckle_syntax__item_span_content_tests__span_content_macro.snap  speckle_syntax__item_span_content_tests__span_content_mod.snap  speckle_syntax__item_span_content_tests__span_content_static.snap  speckle_syntax__item_span_content_tests__span_content_struct.snap  speckle_syntax__item_span_content_tests__span_content_trait.snap  speckle_syntax__item_span_content_tests__span_content_union.snap  speckle_syntax__item_speckle_attribute_tests__speckle_attribute_bare.snap  speckle_syntax__item_speckle_attribute_tests__speckle_attribute_named_id.snap  speckle_syntax__item_speckle_attribute_tests__speckle_attribute_positional_string.snap  speckle_syntax__item_struct_tests__struct_generic_span_full.snap  speckle_syntax__item_struct_tests__struct_named_fields_span_full.snap  speckle_syntax__item_struct_tests__struct_tuple_span_full.snap  speckle_syntax__item_struct_tests__struct_unit_span_full.snap  speckle_syntax__item_struct_tests__struct_with_attributes_span_full.snap  speckle_syntax__speckle_attribute__tests__speckle_attribute_bare.snap  speckle_syntax__speckle_attribute__tests__speckle_attribute_named_id.snap  speckle_syntax__speckle_attribute__tests__speckle_attribute_named_identifier.snap  speckle_syntax__speckle_attribute__tests__speckle_attribute_positional_string.snap
(+1 files in other folders)
