[package]
name = "cargo-speckle"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
speckle-syntax = { path = "../speckle-syntax" }
syn = { version = "2.0.117", features = ["full", "visit"] }
tempfile = "3.26.0"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4"] }
walkdir = "2.5.0"

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml"] }
tempfile = "3.26.0"
