[package]
name = "cargo-speckle"
description = "Cargo subcommand for managing Speckle attributes in Rust source files"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
gix = { version = "0.83.0", default-features = false, features = ["status", "revision", "sha1"] }
speckle-db = { version = "0.1.0", path = "../speckle-db" }
speckle-syntax = { version = "0.1.0", path = "../speckle-syntax" }
syn = { version = "2.0.117", features = ["full", "visit"] }
tempfile = "3.26.0"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4"] }
walkdir = "2.5.0"

[dev-dependencies]
indoc = "2.0.6"
insta = { version = "1.47.2", features = ["yaml"] }
tempfile = "3.26.0"
