[package]
name = "speckle-db"
description = "SQLite database for Speckle specifications and implementations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["database"]

[dependencies]
limbo = { version = "0.0.22", features = ["index_experimental"] }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.26.0"
tokio = { version = "1", features = ["rt", "macros"] }
