[package]
name = "speckle-db"
description = "SQLite database for Speckle specifications and implementations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["database"]

[dependencies]
rusqlite = "0.39.0"
speckle-syntax = { version = "0.1.0", path = "../speckle-syntax" }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.26.0"
