[package]
name = "speckle-macro"
description = "Procedural macros for the Speckle code generation system"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
readme = "README.md"
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
speckle-syntax = { version = "0.1.0", path = "../speckle-syntax" }
