[package]
name = "speckle-syntax"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
syn = { version = "2.0.117", features = ["full"] }
thiserror = "2.0.18"

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
