[package]
name = "speckle-syntax"
description = "Syntax parsing for Speckle attributes and annotated Rust items"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["parsing", "development-tools"]

[dependencies]
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
syn = { version = "2.0.117", features = ["full", "visit"] }
thiserror = "2.0.18"

[dev-dependencies]
indoc = "2.0.6"
insta = { version = "1.47.2", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
