[package]
name = "speckle"
description = "Specification-driven, AI-assisted Rust code generation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools"]

[dependencies]
speckle-macro = { version = "0.1.0", path = "../speckle-macro" }
